fixed z-index problem with modals

--- a/assets/css/hacks.css
+++ b/assets/css/hacks.css
@@ -273,3 +273,7 @@ a.tag {
 .field-with-icon .input {
   padding-right: 3.5em;
 }
+
+.modal {
+  z-index: 1000;
+}
